[gd_scene load_steps=24 format=3 uid="uid://di6qlq0p6axaa"]

[ext_resource type="Texture2D" uid="uid://bdm0wwis5t3vu" path="res://map/interactables/save_point/save_point.png" id="1_i1gpb"]
[ext_resource type="Script" uid="uid://7rflvtsvqaqj" path="res://map/interactables/save_point/save_point.gd" id="1_rmrh2"]
[ext_resource type="Texture2D" uid="uid://caht7voahopak" path="res://key_prompts/Keyboard & Mouse/Dark/E_Key_Dark.png" id="4_amda5"]
[ext_resource type="AudioStream" uid="uid://dqsi41qw0igni" path="res://map/interactables/save_point/activate.wav" id="4_jukjh"]
[ext_resource type="Texture2D" uid="uid://dd3x3aeacd686" path="res://key_prompts/PS5/PS5_Triangle.png" id="7_fkfsy"]
[ext_resource type="Texture2D" uid="uid://by7wmu7kfabjt" path="res://key_prompts/Steam Deck/SteamDeck_Y.png" id="8_it03t"]
[ext_resource type="Texture2D" uid="uid://c10hb35ut6ssv" path="res://key_prompts/Xbox Series/XboxSeriesX_Y.png" id="9_105jd"]

[sub_resource type="Curve" id="Curve_8hd83"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_jukjh"]
curve = SubResource("Curve_8hd83")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8hd83"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_max = 187.1
gravity = Vector3(0, -200, 0)
damping_max = 30.073
scale_max = 5.0
scale_curve = SubResource("CurveTexture_jukjh")
color = Color(1, 0.992157, 0.521569, 1)
hue_variation_min = -0.05
hue_variation_max = 0.05
turbulence_enabled = true

[sub_resource type="AtlasTexture" id="AtlasTexture_rmrh2"]
atlas = ExtResource("1_i1gpb")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hd83"]
atlas = ExtResource("1_i1gpb")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jukjh"]
atlas = ExtResource("1_i1gpb")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_amda5"]
atlas = ExtResource("1_i1gpb")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hea2r"]
atlas = ExtResource("1_i1gpb")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_my5rw"]
atlas = ExtResource("1_i1gpb")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lp2ea"]
atlas = ExtResource("1_i1gpb")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qb0lh"]
atlas = ExtResource("1_i1gpb")
region = Rect2(0, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_fkfsy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmrh2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hd83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jukjh")
}],
"loop": false,
"name": &"activate",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_amda5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hea2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my5rw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lp2ea")
}],
"loop": true,
"name": &"active",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qb0lh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rmrh2"]
radius = 28.0

[sub_resource type="GDScript" id="GDScript_lp2ea"]
script/source = "extends Node

@export_category(\"Prompts\")
@export var PC_light: Sprite2D
@export var PC_dark: Sprite2D
@export var PS5: Sprite2D
@export var STEAM_deack: Sprite2D
@export var Xbox: Sprite2D

func _ready() -> void:
	_hide_all()
	_update_prompt()

func _hide_all() -> void:
	PC_light.visible = false
	PC_dark.visible = false
	PS5.visible = false
	STEAM_deack.visible = false
	Xbox.visible = false

func _update_prompt() -> void:
	_hide_all()
	var controler_type = Input.get_joy_name(0)
	if controler_type == null:
		controler_type = \"\"
	
	if \"PS\" in controler_type:
		PS5.visible = true
		
	elif \"Steam\" in controler_type:
		STEAM_deack.visible = true
		
	elif \"Xbox\" in controler_type:
		Xbox.visible = true
		
	else:
		if Game.LightMode:
			PC_light.visible = true
		else:
			PC_dark.visible = true 
	
"

[sub_resource type="Gradient" id="Gradient_qb0lh"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_fkfsy"]
gradient = SubResource("Gradient_qb0lh")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.5, 0)

[node name="SavePoint" type="Node2D"]
script = ExtResource("1_rmrh2")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(0, -20)
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_8hd83")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
light_mask = 0
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_fkfsy")

[node name="InteractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
visible = false
position = Vector2(0, -16)
shape = SubResource("CircleShape2D_rmrh2")

[node name="ActivateSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_jukjh")
volume_db = -15.0

[node name="Prompts" type="Node2D" parent="." node_paths=PackedStringArray("PC_light", "PC_dark", "PS5", "STEAM_deack", "Xbox")]
script = SubResource("GDScript_lp2ea")
PC_light = NodePath("EKeyLight")
PC_dark = NodePath("EKeyDark")
PS5 = NodePath("Ps5Triangle")
STEAM_deack = NodePath("SteamDeckY")
Xbox = NodePath("XboxSeriesXY")

[node name="EKeyLight" type="Sprite2D" parent="Prompts"]
visible = false
position = Vector2(0.25, -33.75)
scale = Vector2(0.125, 0.125)
texture = ExtResource("4_amda5")

[node name="EKeyDark" type="Sprite2D" parent="Prompts"]
position = Vector2(0.25, -33.75)
scale = Vector2(0.125, 0.125)
texture = ExtResource("4_amda5")

[node name="Ps5Triangle" type="Sprite2D" parent="Prompts"]
visible = false
position = Vector2(0.25, -33.75)
scale = Vector2(0.125, 0.125)
texture = ExtResource("7_fkfsy")

[node name="SteamDeckY" type="Sprite2D" parent="Prompts"]
visible = false
position = Vector2(0.25, -33.75)
scale = Vector2(0.125, 0.125)
texture = ExtResource("8_it03t")

[node name="XboxSeriesXY" type="Sprite2D" parent="Prompts"]
visible = false
position = Vector2(0.25, -33.75)
scale = Vector2(0.125, 0.125)
texture = ExtResource("9_105jd")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -18)
color = Color(0.222372, 0.798661, 0, 1)
energy = 4.39
shadow_enabled = true
texture = SubResource("GradientTexture2D_fkfsy")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
